[gd_scene load_steps=9 format=2]

[ext_resource path="res://Riel.gd" type="Script" id=1]
[ext_resource path="res://assets/symbols/strawberry.png" type="Texture" id=2]
[ext_resource path="res://assets/symbols/cherry.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/loop.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Fonts/ARIAL.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://assets/symbols/lemon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=2]
size = 184
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "Nueva Animación"

[node name="Riel" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_right = 512.0
margin_bottom = 1568.0
rect_scale = Vector2( 0.3, 0.3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 512.0
margin_bottom = 1544.0
grow_horizontal = 0
grow_vertical = 0

[node name="1" type="TextureRect" parent="VBoxContainer2/VBoxContainer"]
margin_right = 512.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 6 )

[node name="2" type="TextureRect" parent="VBoxContainer2/VBoxContainer"]
margin_top = 516.0
margin_right = 512.0
margin_bottom = 1028.0
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 3 )

[node name="3" type="TextureRect" parent="VBoxContainer2/VBoxContainer"]
margin_top = 1032.0
margin_right = 512.0
margin_bottom = 1544.0
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_top = 1548.0
margin_right = 512.0
margin_bottom = 1760.0
custom_fonts/font = SubResource( 2 )
text = "SPIN"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="StartStop" type="AudioStreamPlayer" parent="."]

[node name="Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Nueva Animación" = SubResource( 3 )

[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="StartStop" to="." method="_on_StartStop_finished"]
[connection signal="finished" from="Loop" to="." method="_on_Loop_finished"]
